--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <br> <br> Мне не нужно других девок, <br>Мне нужна лишь только ты.
     <br>Самый лучший человечек <br>Для меня, Аруня, ты!</font></center>
     <br><br><br><br><br>
-    <img src=![screenshot](https://github.com/Stachinyaka/arina/blob/main/img/photo11.jpg) height="375" alt="">
-    <img src="https://github.com/Stachinyaka/arina/blob/main/img/photo12.jpg" height="375" alt="">
-    <img src="https://github.com/Stachinyaka/arina/blob/main/img/photo13.jpg" height="375" alt="">
-    <img src="https://github.com/Stachinyaka/arina/blob/main/img/photo14.jpg" height="375" alt="">
-
+        <img src="img\photo11.jpg" height="375" alt="">
+        <img src="img\photo12.jpg" height="375" alt="">
+        <img src="img\photo13.jpg" height="375" alt="">
+        <img src="img\photo14.jpg" height="375" alt="">
 
 </body>
 </html>
